Adding arrow stuff

--- a/Arrow/index.html
+++ b/Arrow/index.html
@@ -6,8 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="arrow"></div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script> 
+	<div id="main">
+		<input id="amountPlayers" type="text" placeholder="How many players">
+		<button id="setAmount">Submit</button>
+	</div>
+	<div id="game">
+		<div id="container"></div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 	<script type="text/javascript" src="arrow.js"></script>
 </body>
 </html>
